--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@
 
 html {
   box-sizing: border-box;
-  scroll-behavior: smooth;
 }
 
 body {
@@ -72,10 +71,16 @@ a {
   text-decoration: none;
   border-bottom: 3px solid transparent;
   font-weight: bold;
+  cursor: pointer;
 }
 
 a:hover,
 a:focus {
+  color: var(--on-background);
+  border-bottom: 3px solid;
+}
+
+a .active{
   color: var(--on-background);
   border-bottom: 3px solid;
 }
