--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ p {
 /* Contact Section */
 .fab {
   font-size: 100px;
-  margin-right: 50px;
+  margin: 20px;
   cursor: pointer;
   color: var(--primary-color);
 }
@@ -278,6 +278,12 @@ input:checked + .slider::before {
   display: none;
 }
 
+.social-icons{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 @media only screen and (max-width: 850px) {
   #hamburger {
     display: block;
@@ -311,6 +317,16 @@ input:checked + .slider::before {
     height: 100%;
     overflow-y: hidden;
     overflow-x: hidden;
+  }
+
+  .buttons {
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .display-buttons{
+    margin: 5px;
   }
 }
 
